--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Mike Kelly",
   "license": "Apache-2.0",
   "dependencies": {
-    "express": "^4.16.3"
+    "body-parser": "^1.18.3",
+    "colors": "^1.3.1",
+    "express": "^4.16.3",
+    "jsonschema": "^1.2.4"
   }
 }
